Agora sim o desafio certo

--- a/Imagem_html_css/index.html
+++ b/Imagem_html_css/index.html
@@ -8,15 +8,23 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <section>
-        <div class="row">
-            <div class="col sol"></div>
-            <div class="col chao">
-                <span class="gimli"></span>
-                <span class="casa"></span>
-                <span class="arvore"></span>
+    <div class="horizonte">
+        <div class="sol"></div>
+        <div class="area">
+            <div class="casa">
+              <div class="janela"></div>
+              <div class="porta"></div>
             </div>
+          </div>      
+        <div class="vini">
+            <div class="cabeca"><p>parangamicotirimirruaru</p></div>
+            <div class="tronco"></div>
+            <div class="braco-esquerdo"></div>
+            <div class="braco-direito"></div>
+            <div class="perna-esquerda"></div>
+            <div class="perna-direita"></div>
         </div>
-    </section>
+        <div class="chao"></div>
+    </div>
 </body>
 </html>
