Ajustes por puta frescura

--- a/Dinossauro/index.html
+++ b/Dinossauro/index.html
@@ -34,7 +34,7 @@
     </script>
     <script type="text/template" id="result-template">
         <div id="result-html">
-            <h2 id="result-title">Resultado</h2>
+            <h2 id="result-title">Significados</h2>
             <div class="first-result">
                 <span id="one">1.</span> <!-- js -->
             </div>
