--- a/Dinossauro/index.html
+++ b/Dinossauro/index.html
@@ -12,9 +12,9 @@
         <div id="bg-container">
             <h1 id="main-title">Dicionário VVerner</h1>
             <div class="search">
-                <form action="">
+                <form id="search-form">
                     <input type="text" name="word" id="word" placeholder="Digite uma palavra..." required>
-                <button id="btn">Pesquisar</button>
+                <button id="btn" onclick="removeHtml()">Pesquisar</button>
                 </form>
             </div>
             <div id="result">
@@ -22,17 +22,17 @@
             </div>
         </div>
     </div>
-    <script type="text/template" id="insert-template">
+    <template id="insert-template">
        <div id="result-html">
         <h2 id="result-title">Insira os significados</h2>
         <form id="insert-form">
             <textarea id="first-value" type="text" placeholder="Insira o segundo significado" required cols="30" rows="5"></textarea></br>
             <textarea id="second-value" type="text" placeholder="Insira o segundo significado" required cols="30" rows="5"></textarea></br>
-            <button id="insert-btn">Inserir significados</button>
+            <button id="insert-btn" >Inserir significados</button>
         </form>
        </div>
-    </script>
-    <script type="text/template" id="result-template">
+    </template>
+    <template id="result-template">
         <div id="result-html">
             <h2 id="result-title">Significados</h2>
             <div class="first-result">
@@ -42,7 +42,7 @@
                 <span id="two">2.</span> <!-- js -->
             </div>
         </div>
-    </script>
+    </template>
     <script src="js/jquery.js" defer></script> 
     <script src="js/main.js" defer></script>
 </body>
