--- a/Dinossauro/index.html
+++ b/Dinossauro/index.html
@@ -26,7 +26,7 @@
        <div id="result-html">
         <h2 id="result-title">Insira os significados</h2>
         <form id="insert-form">
-            <textarea id="first-value" type="text" placeholder="Insira o segundo significado" required cols="30" rows="5"></textarea></br>
+            <textarea id="first-value" type="text" placeholder="Insira o primeiro significado" required cols="30" rows="5"></textarea></br>
             <textarea id="second-value" type="text" placeholder="Insira o segundo significado" required cols="30" rows="5"></textarea></br>
             <button id="insert-btn" >Inserir significados</button>
         </form>
@@ -43,7 +43,7 @@
             </div>
         </div>
     </template>
-    <script src="js/jquery.js" defer></script> 
+    <script src="../jquery.js" defer></script> 
     <script src="js/main.js" defer></script>
 </body>
 </html>
