Avanço no desafio

--- a/Corretor/index.html
+++ b/Corretor/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oto Dicionário</title>
+    <title>Oto Dicionário</title>  
     <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="/resources/demos/style.css">
+    <link rel="stylesheet" href="//code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
+    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
+    <script src="js/main.js" ></script>
 </head>
 <body>
+    
     <div id="container">
         <div id="bg-container">
             <h1 id="main-title">Oto Dicionário VVerner</h1>
@@ -22,13 +28,13 @@
                     <input type="text" name="search-word" id="search-word" spellcheck="true" required>
                 <button id="searchBtn">Pesquisar</button>
                 </form>
+
             </div>
             <div id="result">
                 <h1 id="to-remove" hidden></h1>
             </div>
         </div>
-    </div>
-    <script src="../jquery.js" defer></script> 
-    <script src="js/main.js" defer></script>
+    </div>   
+
 </body>
 </html>
