--- a/Bola de Cristão/index.html
+++ b/Bola de Cristão/index.html
@@ -19,7 +19,7 @@
     <template id="attempt-template">
         <div id="attempts">
             <h1>Você tem <span id="chances"></span> tentativa(s), insira abaixo um número entre 1 e <span id="max"></span></h1>
-            <input id="guess" type="number" min="1" max="100">
+            <input id="guess" type="number">
             <button id="try">Tentar</button>
 
             <div id="history">
